# spinsat

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yml
.west/: config
app/: CMakeLists.txt  prj.conf  sample.yaml
app/boards/: app.overlay  nrf52832.overlay  nrf52dk_nrf52832.overlay
app/boards/nrf52840dk/: nrf52840.overlay
app/core/: CMakeLists.txt  IMU.c  example.c  state_machine.c  state_machine.h
app/core/IMU/: CMakeLists.txt
app/core/example/: CMakeLists.txt  IMU.c  IMU.h  example.h
app/core/zephyr/: module.yml
app/src/: main.c
doc/: conf.py
dts/bindings/: pwm-servo.yaml
include/app/lib/: bluetooth.h  imu.h  motor.h  state_machine.h
lib/: CMakeLists.txt  Kconfig
lib/bluetooth/: CMakeLists.txt  Kconfig  bluetooth.c
lib/imu/: CMakeLists.txt  Kconfig  imu.c
lib/motor/: CMakeLists.txt  Kconfig  motor.c
lib/state_machine/: CMakeLists.txt  Kconfig  state_machine.c
misc/zephyr/config/: west.yml
simulations/: README.md  bldc_driver.ino  bldc_driver_serial_com.ino
